# Proiect_PAOO

./: CMakeLists.txt  README.md  automobil.cpp  automobil.h  main.cpp
include/: Automobil.h
src/: Automobil.cpp  main.cpp
